<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ebre_escool</string>
    <string name="app_id">433645486786215</string>
    <string name="action_settings">Configuració</string>
    <string name="controlLogin">Iniciar Sessió</string>
    <string name="btnControlLogin">Entrar</string>
    <string name="registerlink"> registra\'t aquí!</string>
    <string name="registerlink_label">Ets nou? </string>
    <string name="rememberUser">Recordar</string>
    <string name="username">Nom Usuari</string>
    <string name="password">Contrasenya</string>
    <string name="teacher_detail"> UPDATE TEACHER</string>
    <string name="labelTeacherId">Teacher ID</string>
    <string name="labelPersonId">Person ID</string>
    <string name="labelUserId">User ID</string>
    <string name="labelEntryDate">Entry Date</string>
    <string name="edtEntryDate">YYYY-MM-DD HH:MM:SS</string>
    <string name="labelLastUpdate">Last Update</string>
    <string name="labelLastUpdateUserId">Last Update User ID</string>
    <string name="labelCreatorId">Creator ID</string>
    <string name="labelMarkedForDeletion">Marked For Deletion</string>
    <string name="labelMarkedForDeletionDate">Marked For Deletion Date</string>
    <string name="labelDni_nif">DNI/NIF</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnPut">CREATE</string>
    <string name="oneAction">Action 1</string>
    <string name="otherActions">Action 2</string>
    <string name="deleteTeacher">Delete</string>
    <string name="put_teacher">CREATE</string>
    <string name="menu_share">Share</string>
    <string name="menu_discard">Discard</string>


    <!--Strings de Alex-->
    <string name="study_submodules_detail"> UPDATE STUDY SUBMODULES</string>
    <string name="labelStudySubmodulesId">Study Submodule ID</string>
    <string name="labelShortname">Shortname</string>
    <string name="labelName">Name</string>
    <string name="labelModuleId">Module ID</string>
    <string name="labelCourseId">CourseId</string>
    <string name="labelOrder">Order</string>
    <string name="labelDescription">Description</string>
    <string name="labelCreatorUserId">Creator User ID</string>
    <string name="deleteStudySubmodules">Delete</string>
    <string name="put_studysubmodules">CREATE</string>
    <!--Alex-->

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="ButtonText2">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#2E64FE</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="sign_in_with_google">Entreu amb Google+</string>
    <string name="sign_in_with_facebook">Entreu amb Facebook</string>
    <string name="sign_in_with_twitter">Entreu amb Twitter</string>
    <string name="title_activity_main">Ebre-escool</string>
    <string name="title_section1">Secció 1</string>
    <string name="title_section2">Secció 2</string>
    <string name="title_section_managment">Manteniments</string>
    <string name="title_section3">Revocar accés</string>
    <string name="title_section4">Sortir</string>
    <string name="navigation_drawer_open">Obrir el calaix de navegació</string>
    <string name="navigation_drawer_close">Tancar el calaix de navegació</string>
    <string name="action_example">Acció TODO</string>
    <string name="hello_blank_fragment1">Fragment Secció 1</string>
    <string name="hello_blank_fragment2">Fragment Secció 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity_blank_fragment_esborrar">MainActivityBlankFragmentEsborrar</string>
    <string name="hello_world">Hello world!</string>
    <string name="com_facebook_loginview_log_in_button">Entreu amb Facebook</string>
    <string name="com_facebook_loginview_log_out_button">Sortiu de facebook</string>
    <string name="title_activity_wizard">WizardActivity</string>
    <string name="title_activity_initial_settings_wizard">InitialSettingsWizardActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="wizard_next">Següent</string>
    <string name="wizard_previous">Anterior</string>
    <string name="wizard_finish">Finalitzar</string>
    <string name="choose_a_school">Escolliu el vostre centre</string>
    <string name="initial_settings_action_bar_title">Ebre-escool</string>
    <string name="initial_settings_action_bar_subtitle">Assistent configuració inicial</string>
    <string name="preferences_label">Ebreescool. Preferències</string>
    <string name="preferences_sublabel">Modifica les preferències</string>
    <string name="preferences_sublabel_summary">Preferències de l\'aplicació ebre_escool</string>
    <string name="user_not_found_label">Usuari no trobat!</string>
    <string name="password_incorrect_label">Password incorrecte!</string>
    <string name="login_ok_label">Login correcte!</string>
    <string name="internet_connection_error_title">Error de connexió a Internet!</string>
    <string name="internet_connection_error_label">Si us plau activeu la connexió a Internet abans de continuar</string>
    <string name="action_initial_settings_wizard">Configuració inicial</string>
    <string name="title_activity_managment">ManagmentActivity</string>

    <!-- MANAGMENT ACTIVITY -->
    <string name="managment_title_section1_profe">Exemple buit (Profe)</string>
    <string name="managment_title_section2_enrollments">Matrícules (Albert)</string>
    <string name="managment_title_section3_persons">Persones (Nico)</string>
    <string name="managment_title_section4_classroom_groups">Grups de classe (Rafael)</string>
    <string name="managment_title_section5_teachers">Professors (Iván)</string>
    <string name="managment_title_section6_users">Usuaris (Dorian)</string>
    <string name="managment_title_section7_incidents">Incidències (Liviu)</string>
    <string name="managment_title_section8_study_submodules">UFs (Alex)</string>
    <string name="managment_title_section9_lessons">Lliçons (Marc)</string>
    <string name="managment_title_section10_employees">Empleats (Paolo)</string>
    <string name="managment_title_section11_comeback">Tornar</string>
    <string name="hello_blank_fragment_example_profe">Fragment exemple profe</string>
    <string name="incorrect_school_data_title">Dades del centre incorrectes o incompletes</string>
    <string name="incorrect_school_data_label">Si us plau informeu al administrador</string>
    <string name="notvalid_login_url">La URL de login ("%1$s") no és vàlida o és incorrecte</string>
    <string name="notvalid_api_url">La API URL ("%1$s") no existeix o no és correcte</string>
    <string name="username_required">El camp usuari és obligatori</string>
    <string name="password_required">El camp password és obligatori</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signUpTitle">Creeu un compte</string>
    <string name="first_name">Nom</string>
    <string name="last_name">Cognoms</string>
    <string name="email">Email</string>
    <string name="btnSignUp">Crear compte</string>
    <string name="sign_up_with_google">Crear amb Google</string>
    <string name="sign_up_with_facebook">Crear amb Facebook</string>
    <string name="sign_up_with_twitter">Crear amb Twitter</string>
    <string name="response_code_200">Response code 200. Login OK!</string>
    <string name="invalid_google_email">Error: No s\'ha obtingut cap email de Google. Proveu d\'entrar utilitzant un altre mètode</string>
    <string name="twitter_oauth_error_title">Twitter oAuth tokens</string>
    <string name="twitter_oauth_error_label">Please set your twitter oauth tokens first!</string>
    <string name="loginlink">Ja tens un usuari?</string>
    <string name="first_name_required">El camp nom és obligatori</string>
    <string name="last_name_required">El camp cognom és obligatori</string>
    <string name="email_required">El camp email és obligatori</string>
    <string name="sign_up_password_required">El camp password és obligatori</string>
    <string name="validating_sign_up">connectant al servidor...</string>




    <!-- Strings de Nicolae -->
    <string name="choose_a_person">Escolliu una persona.</string>
    <string name="add_person">ADD</string>
    <string name="nonStandartOption">Opció 1</string>
    <string name="nonStandartOption2">Opció 2</string>
    <string name="deletePerson">Esborrar</string>
    <string name="editPerson">Edit</string>

    <string name="label_person_id">Id:</string>
    <string name="label_person_givenname">Nom:</string>
    <string name="label_person_surname1">Primer Cognom:</string>
    <string name="label_person_surname2">Segon Cognom:</string>
    <string name="label_person_email">Correu:</string>
    <string name="label_person_dni">DNI/NIE:</string>
    <string name="label_person_telefon">Telèfon o Mòbil:</string>
    <string name="label_person_notes">Notes:</string>
    <string name="button_person_guardar">Guardar</string>
    <string name="button_person_cancelar">Cancelar</string>

</resources>
