<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/balloon_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_bg"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="28dp">

            <TextView
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="80dp"
                android:text="@string/signUpTitle"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <AutoCompleteTextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:paddingBottom="10dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF" />

            <AutoCompleteTextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:paddingBottom="10dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingBottom="10dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF" />


            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="262dp"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                 />

            <Button
                android:id="@+id/btnPersonalSignUp"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:background="#3B96CE"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btnSignUp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:textColor="#FFFFFF" />

            <TextView android:id="@+id/link_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginlink"
                android:layout_marginLeft="3dp"
                android:textSize="15dip"
                android:textColor="#3B96CE"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="false"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_bg"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btn_google_sign_up"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/layers_gplus_button_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/sign_up_with_google" />

            <com.facebook.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_facebook_sign_up"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/layers_fb_button_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                fb:login_text="@string/sign_up_with_facebook"
                fb:logout_text="@string/sign_up_with_facebook"
                />

            <!-- Twitter not provides user email then not very useful!
            <Button
                android:id="@+id/btn_twitter_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/layers_twitter_button_bg"
                android:text="@string/sign_up_with_twitter"
                style="@style/ButtonText"
                /> -->
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
