<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 
    
    android:background="@drawable/balloon_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp">

        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="80dp"
            android:text="@string/controlLogin"
            android:textColor="#3B96CE"
            android:textStyle="bold"/>


        <!--<EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF">

            <requestFocus />
        </EditText>-->

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <!--
        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
        //android:drawableRight="@android:drawable/ic_delete"
        />-->

        <EditText
            android:id="@+id/password"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnPersonalLogin"
            style="@style/ButtonText2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:background="#3B96CE"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btnControlLogin"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        android:layout_centerInParent="true">
        
    	<Button
    	    android:id="@+id/btn_google_sign_in"
    	    style="@style/ButtonText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="4dp"
    	    android:background="@drawable/layers_gplus_button_bg"
    	    android:paddingBottom="10dp"
    	    android:paddingLeft="30dp"
    	    android:paddingRight="10dp"
    	    android:paddingTop="10dp"
    	    android:text="@string/sign_in_with_google" />

        <com.facebook.widget.LoginButton
            android:id="@+id/facebook_login_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/layers_fb_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/sign_in_with_facebook"
            />

        <Button 
	       	android:id="@+id/btn_twitter_sign_in"
	       	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
	       	android:paddingLeft="30dp"
	        android:layout_margin="4dp"
	       	android:background="@drawable/layers_twitter_button_bg"
	       	android:text="@string/sign_in_with_twitter"
	       	style="@style/ButtonText"
	       />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
