<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.acacha.ebre_escool.ebre_escool_app.managmentsandbox.person.FragmentPersonInfo" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView_person_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_person_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_id"
            android:ems="10" />

        <TextView
            android:id="@+id/textView_person_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_id"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_givenname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_nom"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/textView_person_cognom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_nom"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_surname1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_cognom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_cognom1"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/textView_person_cognom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_cognom1"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_surname2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_cognom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_cognom2"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/textView_person_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_cognom2"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_email"
            android:ems="10"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/textView_person_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_email"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_dni"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_dni"
            android:ems="10">
        </EditText>

        <TextView
            android:id="@+id/textView_person_telefon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_dni"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_telefon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_telefon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_telefon"
            android:ems="10"
            android:inputType="phone">
        </EditText>


        <TextView
            android:id="@+id/textView_person_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_person_telefon"
            android:layout_marginTop="20dp"
            android:text="@string/label_person_notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_person_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_person_notes"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <LinearLayout
            android:id="@+id/linearBottons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_person_notes"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

<!--            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_person_cancelar" />
-->

            <Button
                android:id="@+id/button_person_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_person_guardar" />

            <Button
                android:id="@+id/button_person_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_person_guardar" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>